--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,7 +1,6 @@
 .cover {
   max-width: 1184px;
   margin: 0 auto;
-  
   margin: 92px auto 0;
 }
 
@@ -21,13 +20,13 @@
 
 @media screen and (max-width: 768px) {
   .cover {
-    padding: calc(4rem + (100vw - 320px) / (768 - 320) * (92 - 66)) 0 calc(4rem + (100vw - 320px) / (768 - 320) * (92 - 64));
+    padding: 90px 0 0px;
   }
 }
 
 @media screen and (max-width:520px){
   .cover{
-    margin: auto 0;
     min-height: 200px;
+    padding-top: 66px;
   }
 }
