--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,6 +1,5 @@
 .header {
   max-width: 1184px;
-  min-height: 52px;
   padding: 28px 48px 56px 48px;
   display: flex;
   justify-content: space-between;
@@ -17,6 +16,6 @@
     
     @media screen and (max-width: 768px) {
     .header {
-    padding: calc(16px + (100vw - 320px) / (768 - 320) * (28 - 16)) calc(16px + (100vw - 320px) / (768 - 320) * (24 - 16)) 0;
+    padding: 0 16px 0 16px;
      }
     }
