--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -1,7 +1,7 @@
 .cover__subtitle {
   color: white;
   max-width: 360px;
-  font-family: 'Inter';
+  font-family: 'Inter', Arial, Helvetica, sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 18px;
@@ -17,5 +17,6 @@
     font-size: 14px;
     line-height: 1.14;
     max-width: 288px;
+    margin: 16px 0 0;
   }
 }
