--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -13,6 +13,10 @@
   margin-right: 0;
 }
 
+.footer__link:hover {
+  opacity: 0.8;
+}
+
 @media screen and (max-width: 540px) {
   .footer__link {
     font-size: 24px;
