--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -7,15 +7,23 @@
   margin: 0 auto;
   justify-content: space-between;
 }
+
+@media screen and (max-width:1024px){
+  .footer{
+    max-width: 928px;
+  }
+}
+
 @media screen and (max-width:840px){
   .footer{
     padding: 88px 0 24px;
     max-width: calc(100% - 24px * 2);
   }
 }
+
 @media screen and (max-width:620px){
   .footer{
-    padding: 0 24px;
+    padding: 64px 0 24px;
     max-width: calc(100% - 16px * 2);
     flex-direction: column;
     align-items: flex-start;
