--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -1,6 +1,5 @@
 .header__lang-link {
-  width: 30px;
-  height: 28px;
+  
   font-family: 'Inter';
   font-style: normal;
   font-weight: 400;
@@ -12,8 +11,21 @@
   text-decoration: none;
 }
 
+.header__lang-link:hover {
+  opacity: 0.8;
+}
+
 @media screen and (max-width: 768px) {
   .header__lang-link {
     font-size: calc(16px + (100vw - 320px) / (768 - 320) * (24 - 18));
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .header__lang-link {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 111%;
   }
 }
