--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -1,7 +1,7 @@
 .lead{
   font-family: 'Inter', Arial, sans-serif;
   width: 984px;
-  padding: 56px 0 0;
+  padding: 0 0 0;
   margin: 0 auto;
   display: flex;
   flex-direction: column;
