--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -37,7 +37,7 @@
 @media screen and (max-width: 425px) {
   .place__title {
     max-width: 288px;
-    padding-top: 50px;
+    padding-top: 0;
     padding-bottom: 0;
     padding-left: 16px;
     padding-right: 16px;
