--- a/blocks/place/__website/place__website.css
+++ b/blocks/place/__website/place__website.css
@@ -15,6 +15,12 @@ align-self: end;
   }
 }
 
+@media screen and (max-width: 768px) {
+  .place__website {
+    padding-left: 12px;
+  }
+}
+
 @media screen and (max-width: 540px) {
   .place__website {
   padding: 0;
